--- a/static-site-test/test-auth-server.html
+++ b/static-site-test/test-auth-server.html
@@ -46,7 +46,7 @@
         const resultElement = document.getElementById("result");
         const resultLink = document.getElementById("authURL");
         const getAuthURL =
-            "https://mq2upsbmw9.execute-api.us-west-2.amazonaws.com/dev/api/get-auth-url";
+            "https://muylbuwi61.execute-api.us-west-2.amazonaws.com/dev/api/get-auth-url";
 
         getAuthUrlButton.onclick = function () {
             fetch(getAuthURL)
@@ -67,7 +67,6 @@
         const codeValue = document.getElementById("code");
         const getAccessToken = document.getElementById("getToken");
         const accessTokenElement = document.getElementById("accessToken");
-
         getAccessToken.onclick = function () {
             let code = codeValue.value.trim(); // Get the code from input
 
@@ -79,8 +78,8 @@
             // URL-encode the authorization code
             code = encodeURIComponent(code);
 
-            // Correct the URL: no extra slash is needed before {code}
-            const getTokenRequest = `https://mq2upsbmw9.execute-api.us-west-2.amazonaws.com/dev/api/token/${code}`;
+            // Construct the correct URL with the code dynamically inserted
+            const getTokenRequest = `https://muylbuwi61.execute-api.us-west-2.amazonaws.com/dev/api/token/${code}`;
 
             console.log('Requesting token with code:', code);
 
@@ -96,7 +95,6 @@
                 });
         };
         // --------------------- END OF STEP 2
-
     </script>
 </body>
 
