--- a/static-site-test/test-auth-server.html
+++ b/static-site-test/test-auth-server.html
@@ -29,7 +29,7 @@
         <a id="authURL" href="#" target="_blank">Click to authorize</a>
 
         <h4><b>Step 2:</b> Get your code and exchange for an access token</h4>
-        <p>After you’re redirected back to your Meet app on GitHub, copy the code from the URI.</p>
+        <p>After you’re redirected back to your Meet app on GitHub, copy the code from the URL.</p>
         <label>
             Code input
             <input id="code" type="text" value="" />
