--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 
 <body>
   <div id="root"></div>
+  <footer>
+    <a href="%PUBLIC_URL%/privacy-policy.html">Privacy Policy</a>
+  </footer>
 </body>
-
-</html>
