--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="./favicon.ico" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/meet_logo_192x192.png" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>React App</title>
+  <meta name="description" content="Meet App - Find and Discover Events" />
+
+  <!-- PWA Icons & Manifest -->
+  <link rel="apple-touch-icon" href="./meet_logo_192x192.png" />
+  <link rel="manifest" href="/manifest.json" />
+
+  <title>Meet App</title>
+
+  <!-- CSS & JS -->
+  <link rel="stylesheet" href="./static/css/main.d214f716.css" />
+  <script defer="defer" src="./static/js/main.33cf4fae.js"></script>
 </head>
 
 <body>
   <div id="root"></div>
+
   <footer>
-    <a href="%PUBLIC_URL%/privacy-policy.html">Privacy Policy</a>
+    <a href="./privacy-policy.html">Privacy Policy</a>
   </footer>
 </body>
+
+</html>
